--- a/Hospitalmanagement.html
+++ b/Hospitalmanagement.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital</title>
-    <link rel="stylesheet" href="hospital.css">
 </head>
-<body>
-    <h1>History of our hospital</h1>
+<body style="background-image:url(/image/doctor-character-advising-patient-hospital-cartoon-vector-illustration-female-room-isolated-white-background-scene-204502602.jpg); background-repeat: no-repeat;">
+    <h1 style="background-color: rgba(156, 51, 51, 0.526);text-align: center;border:3px solid rgba(8, 138, 152, 0.885); width: 40%;padding:5px;margin-left: 300px;">History of our hospital</h1>
+    <label for="search">Search by doctors name</label>
+    <input type="search">
+    <h2>Doctors information:</h2>
+    <p>Our doctors are all very skiled and very responsible of their job</p>
+    <p><strong>list of our doctors:</strong></p>
+    <pre style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;border: 5px solid rgba(53, 53, 122, 0.981);border-radius: 10px;background-color: rgba(30, 193, 139, 0.471);">
+        Family physicians.
+        Internists.
+        Emergency physicians.
+        Obstetricians and gynecologists.
+        Neurologists. 
+        Radiologists. 
+        Anesthesiologists.
+        Pediatricians.</pre>
+        <input type="list">
 </body>
 </html>
